--- a/Grover_nqubits.ipynb
+++ b/Grover_nqubits.ipynb
@@ -13,7 +13,7 @@
    "id": "9c7445da",
    "metadata": {},
    "source": [
-    "*Author*: Júlia Barberà, March 3rd 2022"
+    "*Author*: Júlia Barberà, March 10th 2022"
    ]
   },
   {
